# Hackathon-Bordeaux

./: .gitignore  README.md  index.html  inspect_json.out  package-lock.json  presentation.md  ri_etab_pol_p.geojson  satellite-style.json  start.sh
FRONT/: README.md  index.html
api/: main.py  pyproject.toml  requirements.txt  test_api3.py  test_api4.py  test_loader.py
api/src/api/: data_loader.py  industries_loader.py  poi_loader.py  scoring.py
api/src/api/routes/: address.py  cell.py
backend/: README.md  inspect_json.py  print_path.out  print_path.py  ri_basol_p.geojson  test_api.py  test_api2.py  test_loader.out
backend/src/api/: data_loader.py  industries_loader.py  main.py  utils.py
backend/src/api/routes/: address.py  cell.py  map.py
frontend/: app.js  config.js  index.html  package.json  satellite-style.json  style.css
ml_dir/: .env.example  .gitignore  ML_TECHNICAL.md  README.md  config.py  download_data.py  main.py  pyproject.toml  run.py
ml_dir/pipeline/: __init__.py  features.py  kmeans.py  scoring.py
src/api/: data_loader.py  main.py  scoring.py
src/api/routes/: address.py  cell.py  map.py
