[project]
name = "hackathon-bordeaux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "geopandas>=1.0.1",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.6.0",
    "shapely>=2.0.0",
    "uvicorn>=0.39.0",
]
